dashboard/app/assets/stylesheets/application.scss
/* ... */
#signup, #school-info-modal {
  display: flex;
  flex-wrap: wrap;

  .header {
    display: flex;
    flex-wrap: wrap;
  }

  .oauth-links {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 10px;
  }

  .more-details {
    display: flex;
    .more-details-text {
      margin: 0 10px;
    }
  }

  .signup {
    margin: 20px 0;
  }

  .select-user-type-teacher-button, .select-user-type-student-button {
    min-width: 225px;
    min-height: 275px;
    position: relative;
    background-color: $selectUserTypeButtonBackgroundColor;
    color: $selectUserTypeButtonTextColor;
    border-radius: 15px;
    border-color: $selectUserTypeButtonBorderColor;
    display: flex;
    flex-direction: column;

    .user-type-name {
      width: 100%;
      text-align: center;
      margin-top: 10px;
    }

    .user-type-desc {
      text-align: left;
      margin-top: 10px;
      margin-left: 5px;
      margin-right: 5px;
    }

    .user-type-abilities-unordered-list {
      text-align: left;
      width: 85%;
      margin-right: 10%;
    }
  }

  .select-user-type-teacher-button:hover, .select-user-type-student-button:hover {
    background-color: $selectUserTypeButtonBackgroundColorHover;
    color: $selectUserTypeButtonTextColorHover;
  }

  .select-user-type-button-selected {
    background-color: $selectUserTypeButtonBackgroundColorSelected;
    color: $selectUserTypeButtonTextColorSelected;
  }

  .select-user-type-button-selected:hover {
    background-color: $selectUserTypeButtonBackgroundColorSelected;
    color: $selectUserTypeButtonTextColorSelected;
  }

  .finish-signup {
    width: 800px;
  }

  .signup-header {
    margin: 0;
    flex-grow: 1;
    text-align: center;
  }

  .signup, .finish-signup {
    $school-info-background: #f7f7f7;
    $school-info-border-color: #e5e5e5;

    .section-container {
      padding: 10px;
      flex-grow: 1;
      background-color: $school-info-background;
      border: 1px solid $school-info-border-color;

      h5 {
        font-weight: bold;
      }

      hr {
        border: 1px solid $school-info-border-color;
      }
    }

    #school-info-inputs {
      padding: 0;
    }

    .field-row {
      display: flex;
      align-items: center;
    }

    .field {
      width: 600px;
      display: flex;
      justify-content: space-between;
      align-items: center;
    }

    .field-sm {
      width: 400px;
    }

    .field_with_errors {
      display: flex;
      flex-basis: 100%;
      input, select {
        border-color: $red;
      }
    }

    .field_with_errors label {
      color: $black;
    }

    .field_with_errors > input,
    .field_with_errors > select {
      background-color: $white;
    }

    .error {
      color: $red;
      font-style: italic;
      margin: 0;
    }

    .padded {
      padding-left: 10px;
      max-width: 150px;
    }

    select {
      height: 46px;
      margin: 0;
    }

    #school-type {
      height: 36px;
    }

    input[type=text], input[type=password], input[type=email] {
      height: 36px;
    }

    input {
      margin: 0;
    }

    input, select {
      flex-grow: 1;
    }

    .row {
      display: flex;
      margin-bottom: 20px;

      [class*=span] {
        align-self: center;
        display: flex;
        .div {
          align-self: center;
          display: flex;
        }
      }

      label {
        margin: 0;
      }

      input[type=checkbox] {
        flex-grow: 0;
        align-self: center;
        .field_with_errors {
          flex-grow: 0;
        }
      }
    }

    #parent-email-section {
      background-color: $school-info-background;
      border: 1px solid $school-info-border-color;
      flex-wrap: wrap;
    }

    .signup-field-label {
      flex-wrap: wrap;

      p {
        margin: 0;
      }
    }

    #signup-select-user-type-label {
      width: 135px;
    }

    .padded-container {
      padding: 20px;
      display: flex;
      flex-wrap: wrap;
      .row {
        flex-grow: 1;
      }

      .parent-email-field-input {
        flex-grow: 1;
      }
    }

    .parent-email-section-header {
      margin-bottom: 0;
      flex-grow: 1;
    }

    .parent-email-field {
      margin-top: 20px;
      margin-bottom: 0;
      flex-grow: 1;
    }

    #teacher-name-label, #student-name-label {
      display: flex;
      flex-basis: 100%;
    }

    .checkbox {
      display: flex;
      padding: 0;

      label {
        display: flex;
      }

      p, span {
        margin: 0;
        padding: 0 10px;
        font-size: 14px;
      }
      .field_with_errors {
        flex-basis: auto;
      }
    }

    #email-preference-radio, #share-email-reg-part-preference-radio {
      p {
        margin: 0;
      }
    }

    .radio {
      padding: 0;
      display: flex;
      input[type=radio] {
        margin-left: 0;
        align-self: center;
      }
      input[type=radio], label {
        flex-grow: 0;
        margin-right: 5px;
      }
      .field_with_errors {
        flex-basis: auto;
      }
    }

    #school-type {
      width: 370px !important;
    }

    .submit-section {
      display: flex;
      flex-direction: column;
      align-items: flex-end;
    }

    .submit {
      background-color: $orange;
      border: 1px solid $orange;
      color: $white;
      padding: 0 20px;
      margin: 5px 0;
      font-size: 18px;
      height: 40px;
      font-family: $gotham-extra-bold;
    }

    #forgot-password {
      align-self: center;
      font-style: italic;
    }

    .tos {
      p {
        font-size: 14px;
        margin: 0;
      }
    }

    #gdpr-section {
      flex-wrap: wrap;
      .checkbox {
        label {
          align-items: baseline;
          input[type=checkbox] {
            align-self: auto;
          }
        }
      }
      #gdpr-label {
        margin: 0 10px;
        span {
          padding: 0;
        }
      }
    }
  }
}
/* ... */

